Instalação de Plugins!!!

--- a/app/assets/stylesheets/controle_interface.css.scss
+++ b/app/assets/stylesheets/controle_interface.css.scss
@@ -96,6 +96,50 @@
 
 #mensagem-fim-padrao-interface ul li a { visibility: visible; }
 
+#area-menu-contexto{
+  padding:30px;
+  width: 300px;
+  height: 250px;
+  border: 1px solid chocolate;
+  background-color:#CDCDCD;
+  border-radius: 8px;
+  margin: 0 auto;
+}
+
+#menu-contexto-1 {
+  margin: 1em;
+  float: left;
+}
+
+#menu-contexto-1 ul {
+  padding: 0px;
+        margin: 0em 1em;
+}
+
+#menu-contexto-1 li {
+  width: 115px;
+
+        padding: 5px 5px;
+        margin: 2px 0px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #mapa-canvas{
    height:452px;
