--- a/app/assets/stylesheets/controle_interface.css.scss
+++ b/app/assets/stylesheets/controle_interface.css.scss
@@ -49,7 +49,6 @@
 
 .painel-descricao-padrao-interface ol { margin: 25px 0 0 20px ; }
 .painel-descricao-padrao-interface ol li { margin-bottom: 20px; }
-
 .container-artigos article footer {
   margin:0;
   box-shadow:none;
@@ -88,6 +87,7 @@
 
 #botao-avancar-checkbox,
 #botao-avancar-radio-button,
+#botao-avancar-tree-view,
 #botao-avancar-drop-down,
 #botao-avancar-fim
 {
