--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -73,8 +73,8 @@
 			
 			</article>
 		
+		
 			<!-- Padrão Radio Button -->
-
 			<article id="padrao-radio-button">
 				<header class="azul">
 					<h2>Controles de Interfaces - Radio Button</h2>
@@ -140,7 +140,6 @@
 
 			
 			<!-- Padrão Dropdown -->
-				
 			<article id="padrao-drop-down">
 				<header class="azul">
 					<h2>Controles de Interfaces - Dropdown</h2>
@@ -219,13 +218,55 @@
 							</select>
 						</li>
 						
-						<li><a id="botao-avancar-menu-contexto" href="#padrao-menu-contexto" class="botao botao-azul">Avançar</a></li>
+						<li><a id="botao-avancar-drop-down" href="#padrao-tree-view" class="botao botao-azul">Avançar</a></li>
 	
 					</ul>
 				</footer>
 			
 			</article>
 			
+			
+			<!-- Padrão Treeview -->
+			<article id="padrao-tree-view">
+				<header class="azul">
+					<h2>Controles de Interfaces - Treeview</h2>
+				</header>
+				<div id="conteudo-artigos-padrao-interface">
+				
+					<div class="painel-descricao-padrao-interface ">
+						<div id="demonstracao-controle-interface">
+							<p>Os quadrados abaixo são chamados de <b>Dropdown</b></p>
+						</div>
+					
+					</div>
+					<div class="painel-descricao-padrao-interface ">
+						<p>Note que:</p>
+						<ol>
+							<% @controles_interfaces.each do |controles| %>
+								
+								<% if controles.id == 2 %>
+							
+									<% controles.instrucao_usos.each do |instrucao_uso| %>
+										<%=content_tag(:li, instrucao_uso.instrucao )%>
+									<% end %>
+								
+								<%end%>
+							
+							<%end%>
+						</ol>
+					</div>
+
+				</div>
+			
+				<footer>
+					<ul>
+						<li><span>Para ir para a próxma página, escolha o valor avançar no dropdown:</span></li>
+						<li><a id="botao-avancar-tree-view" href="#padrao-menu-contexto" class="botao botao-azul">Avançar</a></li>
+					</ul>
+				</footer>
+			
+			</article>
+
 			
 			<!-- Padrão Menu Contexto -->
 			<article id="padrao-menu-contexto">
@@ -303,36 +344,12 @@
 							</select>
 						</li>
 						
-						<li><a id="botao-avancar-drop-down" href="#padrao-maps" class="botao botao-azul">Avançar</a></li>
+						<li><a id="botao-avancar-menu-contexto" href="#padrao-maps" class="botao botao-azul">Avançar</a></li>
 	
 					</ul>
 				</footer>
 			
 			</article>
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
 			
 			<!-- Padrão maps -->
 			<article id="padrao-maps" onload="inicializaMapa()">
