--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -236,8 +236,101 @@
 					<div class="painel-descricao-padrao-interface ">
 						<div id="demonstracao-controle-interface">
 							<p>Os quadrados abaixo são chamados de <b>Dropdown</b></p>
+							<ul id="arvore">
+									<li><a href="?1">Item 1</a>
+											<ul>
+												<li><a href="?1.0">Item 1.0</a>
+											<ul>
+												<li><a href="?1.0.0">Item 1.0.0</a></li>
+											</ul>
+										</li>
+										<li><a href="?1.1">Item 1.1</a></li>
+										<li><a href="?1.2">Item 1.2</a>
+											<ul>
+												<li><a href="?1.2.0">Item 1.2.0</a>
+													<ul>
+														<li><a href="?1.2.0.0">Item 1.2.0.0</a></li>
+														<li><a href="?1.2.0.1">Item 1.2.0.1</a></li>
+														<li><a href="?1.2.0.2">Item 1.2.0.2</a></li>
+													</ul>
+												</li>
+												<li><a href="?1.2.1">Item 1.2.1</a>
+													<ul>
+														<li><a href="?1.2.1.0">Item 1.2.1.0</a></li>
+													</ul>
+												</li>
+												<li><a href="?1.2.2">Item 1.2.2</a>
+													<ul>
+														<li><a href="?1.2.2.0">Item 1.2.2.0</a></li>
+														<li><a href="?1.2.2.1">Item 1.2.2.1</a></li>
+														<li><a href="?1.2.2.2">Item 1.2.2.2</a></li>
+													</ul>
+												</li>
+											</ul>
+										</li>
+									</ul>
+								</li>
+								<li><a href="?2">Item 2</a>
+									<ul>
+										<li><span>Item 2.0</span>
+											<ul>
+												<li><a href="?2.0.0">Item 2.0.0</a>
+													<ul>
+														<li><a href="?2.0.0.0">Item 2.0.0.0</a></li>
+														<li><a href="?2.0.0.1">Item 2.0.0.1</a></li>
+													</ul>
+												</li>
+											</ul>
+										</li>
+										<li><a href="?2.1">Item 2.1</a>
+											<ul>
+												<li><a href="?2.1.0">Item 2.1.0</a>
+													<ul>
+														<li><a href="?2.1.0.0">Item 2.1.0.0</a></li>
+													</ul>
+												</li>
+												<li><a href="?2.1.1">Item 2.1.1</a>
+													<ul>
+														<li><a href="?2.1.1.0abc">Item 2.1.1.0</a></li>
+														<li><a href="?2.1.1.1">Item 2.1.1.1</a></li>
+														<li><a href="?2.1.1.2">Item 2.1.1.2</a></li>
+													</ul>
+												</li>
+												<li><a href="?2.1.2">Item 2.1.2</a>
+													<ul>
+														<li><a href="?2.1.2.0">Item 2.1.2.0</a></li>
+														<li><a href="?2.1.2.1">Item 2.1.2.1</a></li>
+														<li><a href="?2.1.2.2">Item 2.1.2.2</a></li>
+													</ul>
+												</li>
+											</ul>
+										</li>
+									</ul>
+								</li>
+								<li><a href="?3">Item 3</a>
+									<ul>
+										<li class="open"><a href="?3.0">Item 3.0</a>
+									<ul>
+								<li><a href="?3.0.0">Item 3.0.0</a></li>
+								<li><a href="?3.0.1">Item 3.0.1</a>
+									<ul>
+										<li><a href="?3.0.1.0">Item 3.0.1.0</a></li>
+										<li><a href="?3.0.1.1">Item 3.0.1.1</a></li>
+									</ul>
+								</li>
+								<li><a href="?3.0.2">Item 3.0.2</a>
+									<ul>
+										<li><a href="?3.0.2.0">Item 3.0.2.0</a></li>
+										<li><a href="?3.0.2.1">Item 3.0.2.1</a></li>
+										<li><a href="?3.0.2.2">Item 3.0.2.2</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+			</ul>
 						</div>
-					
 					</div>
 					<div class="painel-descricao-padrao-interface ">
 						<p>Note que:</p>
