--- a/app/assets/stylesheets/controle_interface.css.scss
+++ b/app/assets/stylesheets/controle_interface.css.scss
@@ -89,6 +89,7 @@
 #botao-avancar-radio-button,
 #botao-avancar-tree-view,
 #botao-avancar-drop-down,
+#botao-avancar-menu-contexto,
 #botao-avancar-fim
 {
   visibility: hidden;
