--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -236,6 +236,13 @@
 					<div class="painel-descricao-padrao-interface ">
 						<div id="demonstracao-controle-interface">
 							<p>Os quadrados abaixo são chamados de <b>Dropdown</b></p>
+							
+							
+							<div id="tree"></div>
+							
+							
+							
+							
 							<!--
 							<ul id="arvore">
 									<li><a href="?1">Item 1</a>
@@ -380,12 +387,12 @@
 							<div>
 								<div id="options">
 									<p>
-										<input  id="disableItems" type="button" value="Desabilitar Cortar/Copiar" class="botao-2" />
-										<input  id="enableItems" class="botao-2" type="button" value="Habilitar Cortar/Copiar" disabled="disabled" />
+										<input  id="disableItems" type="button" value="Desabilitar Sair" class="botao-2" />
+										<input  id="enableItems" class="botao-2" type="button" value="Habilitar Sair"  />
 									</p>
 									<p id="linha-botoes-2">
-										<input  id="disableMenus" class="botao-2" type="button" value="Desabilitar o menu" />
-										<input  id="enableMenus" class="botao-2" type="button" value="Habilitar o menu" disabled="disabled" />
+										<input  id="disableMenus" class="botao-2" type="button" value="Desabilitar o menu"   />
+										<input  id="enableMenus" class="botao-2" type="button" value="Habilitar o menu"  />
 									</p>
 								</div>
 							</div>
@@ -423,7 +430,7 @@
 			
 				<footer>
 					<ul>
-						<li><span>Para ir para a próxma página, escolha a opção avançar no menu contexto de desabilite todos os botões:</span></li>
+						<li><span>Para ir para a próxma página, habilite a opção sair do menu contexto e clique nela</span></li>
 						<li><a id="botao-avancar-menu-contexto" href="#padrao-maps" class="botao botao-azul">Avançar</a></li>
 	
 					</ul>
