--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,18 +7,23 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  
+  
+
+  
+  
+  
 
   <link href='http://fonts.googleapis.com/css?family=Orbitron|Michroma|Monofett|Allerta+Stencil|Gruppo|Ubuntu:400,300' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCilujgoVxa6h10qYCnLMyGrwxzgO67kNg&sensor=true"></script>
   <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
   
   
-  <!-- Required CSS -->
-<link type="text/css" rel="stylesheet" href="http://yui.yahooapis.com/2.9.0/build/treeview/assets/skins/sam/treeview.css">
-<!-- Dependency source file --> 
-<script src="http://yui.yahooapis.com/2.9.0/build/yahoo-dom-event/yahoo-dom-event.js" ></script>
-<!-- TreeView source file --> 
-<script src="http://yui.yahooapis.com/2.9.0/build/treeview/treeview-min.js" ></script>
+<!-- Combo-handled YUI CSS files: --> 
+<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.9.0/build/treeview/assets/skins/sam/treeview.css"> 
+<!-- Combo-handled YUI JS files: --> 
+<script type="text/javascript" src="http://yui.yahooapis.com/combo?2.9.0/build/yahoo-dom-event/yahoo-dom-event.js&2.9.0/build/treeview/treeview-min.js"></script>
+
 
 </head>
 <body>
