Correção da janela fancybox de pesquisa de endereço de mapas

--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -335,7 +335,7 @@
 			</article>
 			
 			<!-- Padrão maps -->
-			<article id="padrao-maps" onload="inicializaMapa()">
+			<article id="padrao-maps">
 				
 				<header class="azul">
 					<h2>Controles de Interfaces - Mapas</h2>
@@ -374,13 +374,12 @@
 			</article>
 			
 			
-			
-			
 			<article id="padrao-maps-pesquisa">
 				
 				<header class="azul">
 					<h2>Controles de Interfaces - Mapas</h2>
 				</header>
+				
 				<div id="conteudo-artigos-padrao-interface">
 					<div id="mapa-canvas-pesquisa"></div>
 				</div>
@@ -405,7 +404,7 @@
 							<legend>Endereço</legend>
 							<label>Endereço</label>
 							<input id="endereco-campo-pesquisar-mapas" type="text" spellcheck="true" required="true" />
-							<a id="botao-pesquisar-endereco-maps"  class="botao botao-azul">Pesquisar</a>
+							<a id="botao-pesquisar-endereco-maps" href="#pesquisar-maps"  class="botao botao-azul">Pesquisar</a>
 						</fieldset>
 						<fieldset>
 							<legend>Rotas</legend>
@@ -449,10 +448,7 @@
 				</footer>
 				
 			</article>
-			
 
-			
-			
 		</div>
 	</section>
 </div>
