Correcao do erro fancybox

--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -60,7 +60,7 @@
 					<ul>
 						<li><span>Para ir para a próxma página, marque o Checkbox:</span></li>
 						<li>
-							<input id="checkbox-avancar" type="checkbox" checked="false" />
+							<input id="checkbox-avancar" type="checkbox" />
 							<label>Avançar</label>
 						</li>
 						<li>
@@ -283,11 +283,11 @@
 							<div>
 								<div id="options">
 									<p>
-										<input  id="disableItems" type="button" value="Desabilitar Sair" class="botao-2" />
+										<input  id="disableItems" type="button" value="Desabilitar Sair" class="botao-2" disabled="" />
 										<input  id="enableItems" class="botao-2" type="button" value="Habilitar Sair"  />
 									</p>
 									<p id="linha-botoes-2">
-										<input  id="disableMenus" class="botao-2" type="button" value="Desabilitar o menu"   />
+										<input  id="disableMenus" class="botao-2" type="button" value="Desabilitar o menu" disabled=""   />
 										<input  id="enableMenus" class="botao-2" type="button" value="Habilitar o menu"  />
 									</p>
 								</div>
