Correcao de erros para primeiro release

--- a/app/assets/stylesheets/teclado.css.scss
+++ b/app/assets/stylesheets/teclado.css.scss
@@ -176,7 +176,7 @@
   width:70px;
 }
 
-#barra-de-espaco {
+#espaco {
   width:336px;
 }
 
@@ -185,7 +185,7 @@
   width:80px;
 }
 
-#enter-digitacao {
+#enter {
   font-size:11pt;
   width:82px;
 }
@@ -418,4 +418,9 @@
 
 #botao-confirmar-captcha {
   margin-top: 20px;
+}
+
+#descricao-teclado{
+  padding: 20px;
+  
 }
